--- a/index.html
+++ b/index.html
@@ -2,24 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>1905</title>
+    <title>Map</title>
 
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet' />
     <script src="heap.js"></script>
-
     <link rel="stylesheet" href="map.css">
-    <link rel="stylesheet" href="popup.css">
 
     <meta name="viewport" content="initial-scale=1,maximum-scale=1">
 </head>
 <body>
     <div id='map'></div>
-    <script src="map.js"></script>
 
     <div id="info">
-        To create a path:<br>
-        1) Select and add objects from the list<br><br>
+        <b>To create a path:</b><br>
+        • Select and add objects from the list<br><br>
 
         <label for="shelters">Shelters🏡</label>
         <select class="select" id="shelters">
@@ -41,19 +38,18 @@
         </select>
         <button id="castlesBtn" title="Click to add this object to the path">Add</button>
 
-        <script src="list.js"></script>
 
         <br><br>
         <div>
             <div><strong>Path:</strong></div>
             <div id="path"> </div>
         </div>
-        <button id="pathBtn">Create a path</button>
+        <button id="pathBtn">Create path</button>
         <button id="clearBtn">Clear</button>
         <br><br>
 
 
-        2) Choose one of the recommended paths
+        • Choose one of the recommended paths
         <div>
             <button onclick="viewEasy()" id="easyBtn" title="Click to view easy paths">Easy</button>
             <button onclick="viewMedium()" id="mediumBtn" title="Click to view medium paths">Medium</button>
@@ -73,8 +69,12 @@
         </div>
     </div>
 
-    <script src="highlight.js"></script>
+    <div class="info2" id="info2" style="display: none"></div>
+
+    <script src="map.js"></script>
+    <script src="list.js"></script>
     <script src="recommended.js"></script>
+    <script src="highlight.js"></script>
     <script src="path.js"></script>
 </body>
 </html>
