--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id="info">
         <b>To create a path:</b><br>
-        • Select and add objects from the list<br>
+        • Select objects from the list<br>
 
         <div id="list" style="padding-top: 10px"></div>
 
