recommended-paths-update

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
         </div>
 
         <div id="pathDetails">
-            <div class="recommended" id="path1" title="Click to view path"></div>
-            <div class="recommended" id="path2" title="Click to view path"></div>
-            <div class="recommended" id="path3" title="Click to view path"></div>
-            <div class="recommended" id="path4" title="Click to view path"></div>
-            <div class="recommended" id="path5" title="Click to view path"></div>
-            <div class="recommended" id="path6" title="Click to view path"></div>
-            <div class="recommended" id="path7" title="Click to view path"></div>
-            <div class="recommended" id="path8" title="Click to view path"></div>
-            <div class="recommended" id="path9" title="Click to view path"></div>
+            <div class="recommended" id="path1"></div>
+            <div class="recommended" id="path2"></div>
+            <div class="recommended" id="path3"></div>
+            <div class="recommended" id="path4"></div>
+            <div class="recommended" id="path5"></div>
+            <div class="recommended" id="path6"></div>
+            <div class="recommended" id="path7"></div>
+            <div class="recommended" id="path8"></div>
+            <div class="recommended" id="path9"></div>
         </div>
     </div>
 
